<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.dsmini.Shirtify.Activity.LoginActivity">


    <View
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:background="@drawable/blue_bg"/>

    <TextView
        android:id="@+id/slidingTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_gravity="start"
        android:layout_marginTop="30dp"
            android:layout_marginEnd="70dp"
        android:fontFamily="@font/p_b"
        android:text="LOGIN YOUR\nACCOUNT"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:visibility="invisible" />






    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="end"
                android:layout_marginTop="15dp"
                android:visibility="gone"
                android:layout_marginEnd="15dp"
                android:elevation="10dp"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:id="@+id/manager_portal_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:padding="5dp"
                    android:visibility="gone"
                    android:src="@drawable/ic_manager"
                    android:text="Admin Portal"
                    android:textColor="@color/text_color"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="221dp"
                android:layout_gravity="center"
                android:visibility="invisible"
                app:lottie_loop="true"
                app:lottie_autoPlay="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />



            <TextView
                android:id="@+id/usertype_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/p_b"
                android:text="Login"
                android:textColor="@color/black"
                android:textSize="35sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                app:layout_constraintBottom_toTopOf="@+id/login_signup_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/usertype_login"
                app:layout_constraintVertical_bias="0.263">

                <EditText
                    android:id="@+id/login_email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/text_input_bg"
                    android:drawableLeft="@drawable/ic_baseline_email_24"
                    android:drawablePadding="10dp"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:textColorHint="@color/text_color" />


                <EditText
                    android:id="@+id/login_pass"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"

                    android:background="@drawable/text_input_bg"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="10dp"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:textColorHint="@color/text_color" />

                <TextView
                    android:id="@+id/forget_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:text="Forget password?"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/login_results"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text=""
                    android:textColor="@color/black"
                    android:visibility="gone" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/login_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/button_shape"
                    android:text="Sign In"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/login_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/login_signup_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

            <Button
                android:id="@+id/login_signup_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@android:color/transparent"
                android:text="Create New Account ?"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/l1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>